Sat Jun 13 15:03:41 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (load_lock): show backtrace at circular require.

	* load.c (rb_provide): assumes us-ascii only.

	* load.c (rb_require_safe): FilePathValue() implies rb_str_new4().

	* load.c (rb_mod_autoload): try conversion to path like as
	  require.  [ruby-core:23834]

Sat Jun 13 09:58:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (r_ivar): should not set internal encoding ivar as an
	  ordinary ivar.  [ruby-dev:38596]

Sat Jun 13 07:08:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_f_local_variables): now returns symbols.  a patch from
	  Run Paint Run Run at [ruby-core:23828].

Sat Jun 13 07:06:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_f_catch): updated rdoc about generalized argument,
	  and the case without arguments.  [ruby-core:23827]

Sat Jun 13 06:50:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/net/protocol.rb (Net::BufferedIO#rbuf_fill): TimeoutError is
	  obsolete, use Timeout::Error instead.  [ruby-core:23821]

Sat Jun 13 06:45:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_f_throw): fixed rdoc about execption.
	  [ruby-core:23824]

Fri Jun 12 14:56:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): associate the input encoding when
	  copying an absolute path.  [ruby-dev:38594]

Fri Jun 12 02:41:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_replace_shared): shared target must be frozen.
	  [ruby-core:23727]

Thu Jun 11 21:05:09 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/cmath.rb (exp): omitted redundant function call.

Thu Jun 11 17:49:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (gfCheckVal): never used.

	* ext/bigdecimal/bigdecimal.c (VpInit): fixed format modifiers.

	* ext/bigdecimal/bigdecimal.c (VPrint): constified.

Thu Jun 11 15:27:17 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
