@@ -1,3 +1,7 @@
+Sun Jun 14 01:23:41 2009  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* rational.c (nurat_to_f): use fdiv.
+
 Sat Jun 13 15:03:41 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* load.c (load_lock): show backtrace at circular require.
